<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>mobi.chouette</groupId>
	<artifactId>mobi.chouette</artifactId>
	<version>3.0.0</version>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven.compiler.source>1.7</maven.compiler.source>
		<version.wildfly>8.2.0.Final</version.wildfly>
		<version.wildfly.maven.plugin>1.0.2.Final</version.wildfly.maven.plugin>
		<version.compiler.plugin>3.2</version.compiler.plugin>
		<version.jaxb2.plugin>1.5</version.jaxb2.plugin>
		<version.jar.plugin>2.5</version.jar.plugin>
		<version.war.plugin>2.5</version.war.plugin>
		<version.ejb.plugin>2.4</version.ejb.plugin>
		<version.ear.plugin>2.9.1</version.ear.plugin>
		<shrinkwrap.bom-version>2.1.1</shrinkwrap.bom-version>
		<postgresql.version>9.3-1102-jdbc41</postgresql.version>
		<arquillian-version>1.1.7.Final</arquillian-version>
		<project.rootDir>${project.basedir}</project.rootDir>
	</properties>
	<repositories>
		<repository>
			<id>jboss</id>
			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
		</repository>
		<repository>
			<id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>http://download.osgeo.org/webdav/geotools/</url>
		</repository>
	</repositories>
	<build>
		<plugins>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>sql-maven-plugin</artifactId>
            <version>1.5</version>
            <dependencies>
               <!-- specify the dependent jdbc driver here -->
               <dependency>
                  <groupId>org.postgresql</groupId>
                  <artifactId>postgresql</artifactId>
                  <version>${postgresql.version}</version>
               </dependency>
            </dependencies>
            <!-- common configuration shared by all executions -->
            <configuration>
               <driver>org.postgresql.Driver</driver>
               <url>jdbc:postgresql://localhost:5432/chouette_test</url>
               <username>chouette</username>
               <password>chouette</password>
               <!--all executions are ignored if -Dmaven.test.skip=true or -DskipTests=true -->
               <skip>${skipInitDb}</skip>
            </configuration>
            <executions>
               <execution>
                  <id>create-schema</id>
                  <phase>process-test-resources</phase>
                  <goals>
                     <goal>execute</goal>
                  </goals>
                  <configuration>
                     <autocommit>true</autocommit>
                     <srcFiles>
                        <srcFile>${project.rootDir}/src/test/sql/chouette_test.sql</srcFile>
                     </srcFiles>
                  </configuration>
               </execution>
            </executions>
         </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.8</version>
				<executions>
					<execution>
						<id>unpack</id>
						<phase>process-test-classes</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<verbose>true</verbose>
							<artifactItems>
								<artifactItem>
									<groupId>org.wildfly</groupId>
									<artifactId>wildfly-dist</artifactId>
									<version>${version.wildfly}</version>
									<type>zip</type>
									<overWrite>false</overWrite>
									<outputDirectory>${project.rootDir}/target</outputDirectory>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
					<execution>
						<id>copy</id>
						<phase>process-test-classes</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<verbose>true</verbose>
							<artifactItems>
								<artifactItem>
									<groupId>org.postgresql</groupId>
									<artifactId>postgresql</artifactId>
									<version>${postgresql.version}</version>
									<overWrite>false</overWrite>
									<outputDirectory>${project.rootDir}/target/wildfly-${version.wildfly}/modules/org/postgres/main</outputDirectory>
								</artifactItem>
                        <artifactItem>
                           <groupId>org.postgresql</groupId>
                           <artifactId>postgresql</artifactId>
                           <version>${postgresql.version}</version>
                           <overWrite>false</overWrite>
                           <outputDirectory>${project.rootDir}/target/wildfly-${version.wildfly}/standalone/deployments</outputDirectory>
                        </artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<!-- WildFly test configuration files copy -->
					<execution>
						<id>copy-wildfly-configuration</id>
						<phase>process-test-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.rootDir}/target/wildfly-${version.wildfly}</outputDirectory>
							<resources>
								<resource>
									<directory>src/test/resources-wildfly-configuration</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>
				<configuration>
					<argLine>-Djboss.socket.binding.port-offset=300 -XX:MaxPermSize=256m</argLine>
					<!-- Fork every test because it will launch a separate AS instance -->
					<forkMode>always</forkMode>
					<systemPropertyVariables>
						<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
						<!-- the maven dependency plugin will have already downloaded the server on /target -->
						<jboss.home>${project.rootDir}/target/wildfly-${version.wildfly}</jboss.home>
						<module.path>${project.rootDir}/target/wildfly-${version.wildfly}/modules</module.path>
					</systemPropertyVariables>
					<redirectTestOutputToFile>false</redirectTestOutputToFile>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${version.compiler.plugin}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-ejb-plugin</artifactId>
				<version>${version.ejb.plugin}</version>
				<configuration>
					<ejbVersion>3.2</ejbVersion>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-maven-plugin</artifactId>
				<version>1.12.4.0</version>
				<dependencies>
					<dependency>
						<groupId>sun.jdk</groupId>
						<artifactId>tools</artifactId>
						<version>1.6</version>
						<scope>system</scope>
						<systemPath>${java.home}/../lib/tools.jar</systemPath>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>delombok</id>
						<phase>process-sources</phase>
						<goals>
							<goal>delombok</goal>
						</goals>
						<configuration>
							<addOutputDirectory>false</addOutputDirectory>
							<sourceDirectory>src/main/java</sourceDirectory>
							<verbose>false</verbose>
							<skip>${skipDelombok}</skip>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.bsc.maven</groupId>
										<artifactId>
											maven-processor-plugin
										</artifactId>
										<versionRange>
											[2.2.4,)
										</versionRange>
										<goals>
											<goal>process</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-ear-plugin
										</artifactId>
										<versionRange>
											[2.9.1,)
										</versionRange>
										<goals>
											<goal>
												generate-application-xml
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-dependency-plugin
										</artifactId>
										<versionRange>
											[2.8,)
										</versionRange>
										<goals>
											<goal>unpack</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.projectlombok</groupId>
										<artifactId>lombok-maven-plugin</artifactId>
										<versionRange>[1.12.4.0,)</versionRange>
										<goals>
											<goal>delombok</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencyManagement>
		<dependencies>

			<!-- Default Dependencies -->
			<dependency>
				<groupId>org.wildfly</groupId>
				<artifactId>wildfly-spec-api</artifactId>
				<version>${version.wildfly}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.spec</groupId>
				<artifactId>jboss-javaee-7.0</artifactId>
				<type>pom</type>
				<version>1.0.2.Final</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-cache-core</artifactId>
				<version>3.0.9.Final</version>
			</dependency>

			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>2.2.7</version>
			</dependency>

			<!-- Test Dependencies -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
			</dependency>
			<dependency>
				<groupId>org.wildfly</groupId>
				<artifactId>wildfly-arquillian-container-embedded</artifactId>
				<version>${version.wildfly}</version>
			</dependency>
			<dependency>
				<groupId>org.wildfly</groupId>
				<artifactId>wildfly-embedded</artifactId>
				<version>${version.wildfly}</version>
			</dependency>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>${postgresql.version}</version>
			</dependency>
			<!-- postgres intergration in arquillian -->
			<!-- shrinkwrap BOM -->
			<dependency>
				<groupId>org.jboss.shrinkwrap.resolver</groupId>
				<artifactId>shrinkwrap-resolver-bom</artifactId>
				<version>${shrinkwrap.bom-version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- shrinkwrap dependency chain -->
			<dependency>
				<groupId>org.jboss.shrinkwrap.resolver</groupId>
				<artifactId>shrinkwrap-resolver-depchain</artifactId>
				<version>${shrinkwrap.bom-version}</version>
				<type>pom</type>
				<scope>test</scope>
			</dependency>

			<!-- arquillian itself -->
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>${arquillian-version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>


			<!-- Other Dependencies -->
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.17</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.14.8</version>
			</dependency>
			<dependency>
				<groupId>com.jamonapi</groupId>
				<artifactId>jamon</artifactId>
				<version>2.76</version>
			</dependency>



			<!-- JAXB -->
			<!-- <dependency> -->
			<!-- <groupId>javax.xml.bind</groupId> -->
			<!-- <artifactId>jaxb-api</artifactId> -->
			<!-- <version>2.2.4</version> -->
			<!-- </dependency> -->
			<!-- <dependency> -->
			<!-- <groupId>com.sun.xml.bind</groupId> -->
			<!-- <artifactId>jaxb-xjc</artifactId> -->
			<!-- <version>2.2.4</version> -->
			<!-- </dependency> -->
			<!-- <dependency> -->
			<!-- <groupId>javax.xml.ws</groupId> -->
			<!-- <artifactId>jaxws-api</artifactId> -->
			<!-- <version>2.2.8</version> -->
			<!-- </dependency> -->
			<!-- <dependency> -->
			<!-- <groupId>com.sun.xml.parsers</groupId> -->
			<!-- <artifactId>jaxp-ri</artifactId> -->
			<!-- <version>1.4.5</version> -->
			<!-- </dependency> -->
			<!-- <dependency> -->
			<!-- <groupId>com.sun.xml.ws</groupId> -->
			<!-- <artifactId>jaxws-rt</artifactId> -->
			<!-- <version>2.2.6</version> -->
			<!-- </dependency> -->

			<!-- Utilities Dependencies -->
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>18.0</version>
			</dependency>
			<dependency>
				<groupId>commons-pool</groupId>
				<artifactId>commons-pool</artifactId>
				<version>1.6</version>
			</dependency>
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>3.2.1</version> <!-- 4.0.0 not found -->
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>1.9.2</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.4</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-compress</artifactId>
				<version>1.9</version>
			</dependency>

			<dependency>
				<groupId>xpp3</groupId>
				<artifactId>xpp3</artifactId>
				<version>1.1.3.4.O</version>
			</dependency>
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-jts-wrapper</artifactId>
				<version>10.5</version>
			</dependency>
			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-epsg-wkt</artifactId>
				<version>10.5</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<skipWildfly>false</skipWildfly>
            <skipInitDb>false</skipInitDb>
			</properties>
		</profile>
      <profile>
         <id>skipTestCompileAndRun</id>
         <activation>
            <property>
               <name>maven.test.skip</name>
               <value>true</value>
            </property>
         </activation>
         <properties>
            <skipInitDb>true</skipInitDb>
         </properties>
      </profile>
      <profile>
         <id>skipTestRun</id>
         <activation>
            <property>
               <name>skipTests</name>
            </property>
         </activation>
         <properties>
            <skipInitDb>true</skipInitDb>
         </properties>
      </profile>
		<profile>
			<id>lombok-needs-tools-jar</id>
			<activation>
				<file>
					<missing>${java.home}/../lib/tools.jar</missing>
				</file>
			</activation>
			<properties>
				<skipDelombok>true</skipDelombok>
			</properties>
		</profile>
      <profile>
         <id>skipInitDb</id>
         <activation>
            <property>
               <name>skipInitDb</name>
            </property>
         </activation>
         <properties>
            <skipInitDb>true</skipInitDb>
         </properties>
      </profile>
	</profiles>
	<modules>
		<module>mobi.chouette.common</module>
		<module>mobi.chouette.persistence.hibernate</module>
		<module>mobi.chouette.model</module>
		<module>mobi.chouette.dao</module>
		<module>mobi.chouette.exchange</module>
		<module>mobi.chouette.exchange.neptune</module>
		<module>mobi.chouette.exchange.gtfs</module>
		<module>mobi.chouette.exchange.netex</module>
		<module>mobi.chouette.scheduler</module>
		<module>mobi.chouette.api</module>
		<module>chouette</module>
	</modules>
</project>